<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.amazon.appportfolio.MainActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/my_apps"
                android:id="@+id/myApps"
                android:layout_marginTop="40dp"
                android:textAlignment="center" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/button_popular_movies"
                android:id="@+id/button_popular_movies"
                android:onClick="launchPopularMovies"
                android:layout_marginTop="40dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/button_stock_hawk"
                android:id="@+id/button_stock_hawk"
                android:onClick="launchStockHawk"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/button_build_it_bigger"
                android:id="@+id/button_build_it_bigger"
                android:onClick="launchBuildItBigger"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/button_make_your_app_material"
                android:id="@+id/button_make_your_app_material"
                android:onClick="launchMakeYourAppMaterial"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/button_go_ubiquitous"
                android:id="@+id/button_go_ubiquitous"
                android:onClick="launchGoUbiquitous"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/button_capstone"
                android:id="@+id/button_capstone"
                android:onClick="launchCapstone"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
